@@ -1,7 +1,7 @@
 Package: HiddenMarkov
 Title: Hidden Markov Models
-Version: 1.4-2
-Date: 2010-10-01
+Version: 1.4-3
+Date: 2010-12-19
 Author: David Harte
 Maintainer: David Harte <david@statsresearch.co.nz>
 Description: Contains functions for the analysis of Discrete Time
@@ -14,6 +14,6 @@ Description: Contains functions for the analysis of Discrete Time
 Suggests: snow
 License: GPL (>= 2)
 URL: http://cran.at.r-project.org/web/packages/HiddenMarkov
-Packaged: 2010-10-01 00:50:01 UTC; david
+Packaged: 2010-12-19 00:33:04 UTC; david
 Repository: CRAN
-Date/Publication: 2010-10-01 08:22:46
+Date/Publication: 2010-12-19 09:08:11
